--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
   "content_scripts": [
     {
       "matches": ["http://*.quora.com/*", "https://*.quora.com/*"],
-      "js": ["content.js"]
+      "js": ["lib/jquery.js", "content.js"]
     }
   ]
 }
