--- a/manifest.json
+++ b/manifest.json
@@ -26,5 +26,8 @@
       "js": ["lib/jquery.js", "content.js"]
     }
   ],
-   "web_accessible_resources": ["icons/pocket.jpeg"]
+   "web_accessible_resources": ["icons/pocket.jpeg"],
+
+  "content_security_policy": "script-src 'self' https://quora.com 'unsafe-eval'; object-src 'self'"
+
 }
