Refractored - moved access token to background.js

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   },
 
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["lib/jquery.js","background.js"],
     "persistent": false
   },
 
