--- a/manifest.json
+++ b/manifest.json
@@ -30,7 +30,7 @@
 
   // "content_security_policy": "script-src 'self' https://quora.com 'unsafe-eval'; object-src 'self'",
 
-  "permissions": [
+  "permissions": ["tabs",
     "http://*.quora.com/",
     "https://*.quora.com/",
     "https://*.getpocket.com/",
